--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   </div>
                     
                 <div class="navbar-center space-x-2">
-                    <img class="w-10 h-10" src="/images/logo.png" />
+                    <img class="w-10 h-10" src="images/logo.png">
                     <h1 class="text-4xl text-[#FFF] font-bold">Fruit Burst</h1>
                 </div>
                 <div class="navbar-end">
@@ -318,7 +318,7 @@
 
 <footer class="footer footer-center p-10 bg-[#121212] text-base-content rounded mt-12">
     <div class="navbar-center space-x-2 flex pt-20">
-        <img class="w-8 h-8" src="/images/logo.png" />
+        <img class="w-8 h-8" src="images/logo.png">
         <h1 class="text-3xl text-[#FFF] font-bold">Fruit Burst</h1>
     </div>
     <div class="grid grid-flow-col gap-14">
