--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="text-xl text-[#fff]">We supply highly quality organic products</p>
                     <button class="bg-[#F85559] rounded-lg text-[#fff] text-xl font-extrabold px-5 py-3">Shop Now</button>
                   </div>
-                <img src="/images/banner1.png" class="w-full" />
+                <img src="images/banner1.png" class="w-full">
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle bg-black text-[white] mx-14">❮</a> 
                 <a href="#slide2" class="btn btn-circle bg-black text-[white] mx-14">❯</a>
@@ -70,7 +70,7 @@
                     <p class="text-xl text-[#fff]">We supply highly quality organic products</p>
                     <button class="bg-[#F85559] rounded-lg text-[#fff] text-xl font-extrabold px-5 py-3">Shop Now</button>
                   </div>
-                <img src="/images/banner2.png" class="w-full" />
+                <img src="images/banner2.png" class="w-full">
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle bg-black text-[white] mx-14">❮</a> 
                 <a href="#slide3" class="btn btn-circle bg-black text-[white] mx-14">❯</a>
@@ -84,7 +84,7 @@
                     <p class="text-xl text-[#fff]">We supply highly quality organic products</p>
                     <button class="bg-[#F85559] rounded-lg text-[#fff] text-xl font-extrabold px-5 py-3">Shop Now</button>
                   </div>
-              <img src="/images/banner3.png" class="w-full" />
+              <img src="images/banner3.png" class="w-full">
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle bg-black text-[white] mx-14">❮</a> 
                 <a href="#slide4" class="btn btn-circle bg-black text-[white] mx-14">❯</a>
@@ -98,7 +98,7 @@
                     <p class="text-xl text-[#fff]">We supply highly quality organic products</p>
                     <button class="bg-[#F85559] rounded-lg text-[#fff] text-xl font-extrabold px-5 py-3">Shop Now</button>
                   </div>
-              <img src="/images/banner4.png" class="w-full" />
+              <img src="images/banner4.png" class="w-full">
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle bg-black text-[white] mx-14">❮</a> 
                 <a href="#slide1" class="btn btn-circle bg-black text-[white] mx-14">❯</a>
